--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,5 @@
 
     <string name="app_name">StartUI</string>
     <string name="hello_world">Hello world!</string>
-
+	<string name="app_id">535625b1</string>
 </resources>
